--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -72,7 +72,7 @@ render_appendix("Appendix.Rmd")
 
 When comparing independent groups researchers often analyze the means by performing a Student's *t*-test or classical Analysis of Variance (ANOVA) *F*-test [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998; @Tomarken_and_Serlin_1986]. Both tests rely on the assumptions that iid\footnote{iid means independent and identically distributed}  residuals (1) are sampled from a normal distribution and (2) have equal variances between groups [or homoscedasticity; see @Lix_Keselman_Keselman_1996]. While a deviation from the normality assumption generally does not strongly affect either the Type I error rates [@Glass_et_al_1972; @Harwell_et_al_1992; @Tiku_1971] or the power of the *F*-test [@Harwell_et_al_1992; @David_and_Johnson_1951; @Srivastava_1959; @Tiku_1971],  the *F*-test is not robust against unequal variances [@Grissom_2000], that can alter both Type I error rate [@Harwell_et_al_1992; @David_and_Johnson_1951] and power [@Nimon_2012;@Overall_et_al_1995]. Type I and type II error rates and power will be formally defined in the section called "Stakes Underlying the *F*-test Assumptions of Normality and Homogeneity of variances".
 
-Yet, researchers rarely provide information about these assumptions when they report an *F*-test. We examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016. Fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated taking the homogeneity of variances assumption into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James second order test and the Brown-Forsythe ANOVA (*F*\*-test). To be clear, we focus exclusively on tests that compare groups based on their means. Our goal, throughout this paper, is not to give methodological considerations about the hypothesis. We agree that they exist many tests that allow to consider not only the mean but also other relevant parameters of the distribution (such as standard deviations and the shape of the distribution), in changing the main hypothesis [see for example @Erceg-Hurn_Mirosevich_2008; @Wilcox_1998], however researchers still rely mostly on the mean differences [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998]. We think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to. Hence, although the debate surrounding the *F*-tests assumptions is widely explored [see for example the meta-analysis of @Harwell_et_al_1992], applied researchers still seem to ignore the consequences of their violations and some non-mathematical pedagogical paper summarizing the arguments seems to be lacking. This paper aims at filling this gap. We will discuss the pertinence of the assumptions of the *F*-test, and focus on the question of heteroscedasticity (that, as we will see, is of major consequences). We will explain, with as few mathematical demonstrations as possible, how the alternative tests cope with heteroscedasticity in order to overcome its impact on the results.We conducted simulations comparing *F*-test with the most adequate alternatives. We argue that when variances are equal between groups, the *W*-test has nearly the same empirital Type I error rate and power than the *F*-test but when variances are unequal, it provides empirical Type 1 error rate and power that are closer to the expected level than the *F*-test.Since the *W*-test is available in practically all statistical software packages, researchers can improve their statistical inferences by replacing the *F*-test by the *W*-test.
+Yet, researchers rarely provide information about these assumptions when they report an *F*-test. We examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016. Fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated taking the homogeneity of variances assumption into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James second order test and the Brown-Forsythe ANOVA (*F*\*-test). To be clear, we focus exclusively on tests that compare groups based on their means. Our goal, throughout this paper, is not to give methodological considerations about the hypotheses. We agree that they exist many tests that allow to consider not only the mean but also other relevant parameters of the distributions (such as standard deviations and the shape of the distribution), in changing the main hypothesis [see for example @Erceg-Hurn_Mirosevich_2008; @Wilcox_1998], however researchers still rely mostly on the mean differences [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998]. We think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to. Hence, although the debate surrounding the *F*-tests assumptions is widely explored [see for example the meta-analysis of @Harwell_et_al_1992], applied researchers still seem to ignore the consequences of their violations and some non-mathematical pedagogical paper summarizing the arguments seems to be lacking. This paper aims at filling this gap. We will discuss the pertinence of the assumptions of the *F*-test, and focus on the question of heteroscedasticity (that, as we will see, is of major consequences). We will explain, with as few mathematical demonstrations as possible, how the alternative tests cope with heteroscedasticity in order to overcome its impact on the results.We conducted simulations comparing *F*-test with the most adequate alternatives. We argue that when variances are equal between groups, the *W*-test has nearly the same empirital Type I error rate and power than the *F*-test but when variances are unequal, it provides empirical Type 1 error rate and power that are closer to the expected level than the *F*-test.Since the *W*-test is available in practically all statistical software packages, researchers can improve their statistical inferences by replacing the *F*-test by the *W*-test.
 
 # Normality and Homogeneity of variances in Ecological Conditions
 
@@ -110,9 +110,9 @@ Assumptions violations would not be a matter per se, if the *F*-test was perfect
 
 ## Violation of the Normality Assumption
 
-Regarding the type I error rate, the distribution shape has a very little impact on the *F*-test [@Harwell_et_al_1992]. When departures are very small (i.e. a kurtosis between 1.2 and 3 or a skewness between -.4 and .4), the Type I error rate of the *F*-test is very close of expectations even with very small samples of 11 subjects per group [@Hsu_and_Feldt_1969].     
+Regarding the type I error rate, the distribution shape hasvery little impact on the *F*-test [@Harwell_et_al_1992]. When departures are very small (i.e. a kurtosis between 1.2 and 3 or a skewness between -.4 and .4), the Type I error rate of the *F*-test is very close of expectations even with very small samples of 11 subjects per group [@Hsu_and_Feldt_1969].     
 
-Regarding the type II error rate, many author underlined that departures from normality does not seriously affect the power [@Tiku_1971; @David_and_Johnson_1951; @Harwell_et_al_1992; @Srivastava_1959; @Boneau_1960; @Glass_et_al_1972]. However, following @Srivastava_1959 and @Boneau_1960, kurtosis impacts slightly more the power than skewness; the effect of non-normality on power increases when n are unequal between groups [@Glass_et_al_1972]; lastly the effect of non-normality decreases when n increases [@Srivastava_1959].    
+Regarding the type II error rate, many author underlined that departures from normality does not seriously affect the power [@Tiku_1971; @David_and_Johnson_1951; @Harwell_et_al_1992; @Srivastava_1959; @Boneau_1960; @Glass_et_al_1972]. However, following @Srivastava_1959 and @Boneau_1960, kurtosis impacts slightly more the power than skewness; the effect of non-normality on power increases when sample sizes are unequal between groups [@Glass_et_al_1972]; lastly the effect of non-normality decreases when sample sizes increase [@Srivastava_1959].    
 
 ## Violation of Homogeneity of Variances Assumption
 
@@ -122,13 +122,13 @@ Regarding the type II error, there is a small impact of unequal variances when s
 
 ## Cumulative violation of normality and Homogeneity of Variance
 
-Regarding both type I ad type II error, following @Harwell_et_al_1992, there is no interaction between normality violations and unequal variances. Indeed, the effect of heteroscedasticity is relatively constant regardless of the shape of the distribution. 
+Regarding both type I and type II error, following @Harwell_et_al_1992, there is no interaction between normality violations and unequal variances. Indeed, the effect of heteroscedasticity is relatively constant regardless of the shape of the distribution. 
 
-Throughout mathematical explanations and Monteo Carlo simulations, among the five previously mentioned alternatives, we chose to examine the *F*-test, *W*-test and *F*\*-test and to exclude the James second-order and Alexander-Govern's test. @Tomarken_and_Serlin_1986 have shown that from the available alternatives, the *F*\*-test and the *W*-test are the best choices. Both tests are available in SPSS, which is a widely used software in psychological sciences [@Hoekstra_et_al_2012]. The two later tests were not included, because they yield very similar results to the *W*-test t but are less readily available in statistical software packages. For a more extended description of these two alternatives, see @Schneider_and_Penfield_1997. 
+Throughout mathematical explanations and Monteo Carlo simulations, among the five previously mentioned alternatives, we chose to examine the *F*-test, *W*-test and *F*\*-test and to exclude the James second-order and Alexander-Govern's test. @Tomarken_and_Serlin_1986 have shown that from the available alternatives, the *F*\*-test and the *W*-test are the best choices. Both tests are available in SPSS, which is a widely used software in psychological sciences [@Hoekstra_et_al_2012]. The two later tests were not included, because they yield very similar results to the *W*-test but are less readily available in statistical software packages. For a more extended description of these two alternatives, see @Schneider_and_Penfield_1997. 
 
 # The Mathematical Differences Between the *F*-test, *W*-test, and *F*\*-test
 
-In this section, we will explain the mathematical differences in how the *F*-test, *W*-test and *F*\*-test are computed, with a focus on the way standard deviations are pooled across groups to stress the implications on heteroscedasticity (see appendix for a numerical example). We suggest readers to focus their attention on the terms involving the variances.
+In this section, we will explain the mathematical differences in how the *F*-test, *W*-test and *F*\*-test are computed, with a focus on the way standard deviations are pooled across groups to stress the implications of heteroscedasticity (see appendix for a numerical example). We suggest readers to focus their attention on the terms involving the variances.
 
 As shown in \@ref(eq:Fstat) The *F* statistic is calculated by dividing the inter-group variance by a pooled error term, where $s_{j}^2$ and $n_{j}$ are respectively the variance estimates and the sample sizes from each independent group, and where *k* is the number of independent groups: 
 
@@ -176,8 +176,8 @@ df_d= \frac{1}{\sum_{j=1}^k[\frac{(\frac{(1-\frac{n_j}{N})s_j^2}{\sum_{j=1}^k[(1
 (\#eq:BFdenomDF)
 \end{equation} 
 
-Formula \@ref(eq:Wstat) provides the *W*-test computation. In the numerator of the *W*-test, the squared deviation between group means and the general mean are weighted by $\frac{n_j}{s_j^2}$ instead of $n_j$ [@Brown_and_Forsythe_1974].As a consequence, for equal sample sizes, the group with the highest variance will have smaller weight [@Liu_2015]. The demonstration of Welch's theorem is out of the scope of this paper, however, it is interesting to understand the consequences. When the biggest sample size has the biggest variance, as previously mentioned, the *F*-test will be too conservative, the Welch corrects that even better than the *F*\* such as *W* > *F*\* > *F*. Conversely, when the smallest sample size has the biggest variance, the *F*-test will be too liberal, the Welch also corrects the effect even better than the *F*\* such as *W* < *F*\* < *F*.
- 
+Formula \@ref(eq:Wstat) provides the *W*-test computation. In the numerator of the *W*-test, the squared deviation between group means and the general mean are weighted by $\frac{n_j}{s_j^2}$ instead of $n_j$ [@Brown_and_Forsythe_1974].As a consequence, for equal sample sizes, the group with the highest variance will have smaller weight [@Liu_2015]. 
+
 \begin{equation} 
 W=\frac{\frac{1}{k-1}\sum_{j=1}^k[w_j(\bar{X_j}-\bar{X'})^2]}
 {1+\frac{2(k-2)}{k^2-1}\sum_{j=1}^k[(\frac{1}{n_j-1})(1-\frac{w_j}{w})^2]}
@@ -221,10 +221,10 @@ Sample sizes of *k*-1 groups ($n_j$) were 20,30,40,50 or 100.
 The sample size of the last group was a function of the sample size ratio (*n*-ratio = $\frac{n_k}{n_j}$), ranging from 0.5 to 2, in steps of 0.5. The simulations for which the *n*-ratio equals 1 are the particular case of balanced design (i.e. sample sizes are equal across all groups).
 
 ### *SD*-ratio.
-The *SD* of the last group was a function of the *SD*-ratio (*SD*-ratio = $\frac{\sigma_k}{\sigma_j}$) that was 0.5, 1, 2 or 4.  The simulations for which the *SD*-ratio equals 1 are the particular case of homoscedasticity (i.e. equal variances across groups).
+The *SD* of the population from which was extracted last group was a function of the *SD*-ratio (*SD*-ratio = $\frac{\sigma_k}{\sigma_j}$) that was 0.5, 1, 2 or 4.  The simulations for which the *SD*-ratio equals 1 are the particular case of homoscedasticity (i.e. equal variances across groups).
 
 ### Sample size and variance pairing.
-All possible combinations of *n*-ratio and *SD*-ratio were performed in order to distinguish positive pairing (the group with the largest sample size has the largest *SD*), negative pairing (the group with the smallest sample size has the smallest *SD*), and no pairing (sample sizes and/or *SD* are equal across all groups). All these conditions were tested considering normal and non-normal distributions. 
+All possible combinations of *n*-ratio and *SD*-ratio were performed in order to distinguish positive pairing (the group with the largest sample size is extracted from the population with the largest *SD*), negative pairing (the group with the smallest sample size is extracted from the population with the  smallest *SD*), and no pairing (sample sizes and/or population *SD* are equal across all groups). All these conditions were tested considering normal and non-normal distributions. 
 
 When two groups are compared, conclusions for the three ANOVA tests (*F*, *F*\*, *W*) should yield identical error rates than their equivalent *t*-test [*F*-test is equivalent to the Student's *t*-test as well as *F*\*-test and *W*-test are equivalent to the Welch's *t*-test; @Delacre_et_al_2017]. On the other side, when there are more than three groups, the *F*-test becomes increasingly liberal as soon as the variances of the distributions in each group are not similar, even when sample sizes are equal between groups [@Harwell_et_al_1992; @Quensel_1947].  
  
@@ -247,7 +247,7 @@ Table 1.
 |                               |             |             |             |             |
 |                               |   **<1**    |      g      |      h      |      i      |
 
-*Note.n*-ratio is the sample size of the last group divided by the sample size of the first group. When all sample sizes are equal across groups, *n*-ratio equals 1. When the sample size of the last group is higher than the sample size of the first group, *n*-ratio > 1 and finally, when the sample size of the last group is smaller than the sample size of the first group, *n*-ratio < 1.
+*Note.n*-ratio is the sample size of the last group divided by the sample size of the first group. When all sample sizes are equal across groups, *n*-ratio equals 1. When the sample size of the last group is higher than the sample size of the first group, *n*-ratio > 1 and finally, when the sample size of the last group is smaller than the sample size of the first group, *n*-ratio < 1. *SD*-ratio is the population *SD* of the last group divided by the population *SD* of the first group. When all samples are extracted from populations with the same *SD*, *SD*-ratio equals 1. When the last group is extracted from a population with a larger *SD* than all other groups, *SD*-ratio > 1 and finally,  when the last group is extracted from a population with a smaller *SD* than all other groups, *SD*-ratio < 1. 
 
 ## Type I Error Rate of the *F*-test vs. *W*-test vs. *F*\*-test
 
@@ -275,9 +275,9 @@ In the two top plots in Figure 1 (see cells a, b, and c in Table 1), the populat
 
 In the three bottom plots in Figure 1 (cells d to i, Table 1), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. 
 
-When sample sizes are equal across groups (cells d and g) and when there is a positive correlation between sample sizes and *SDs* (cells e and i), the Type I error rate of the *W*-test is closer of the nominal 5% than the Type I error rate of the *F\**-test and even more than the *F*-test that is persistently at the lower limit of the liberal Bradley's interval, consistently with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995. Moreover, the heteroscedasticity does not impact the type I error rate of the *W*-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions). 
+When sample sizes are equal across groups (cells d and g, bottom left in Figure 1) and when there is a positive correlation between sample sizes and *SDs* (cells e and i, bottom center in Figure 1), the Type I error rate of the *W*-test is closer of the nominal 5% than the Type I error rate of the *F\**-test and even more than the *F*-test that is persistently at the lower limit of the liberal Bradley's interval, consistently with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995. Moreover, the heteroscedasticity does not impact the type I error rate of the *W*-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions). 
 
-When there is a negative correlation between sample sizes and *SDs*, the Type I error rate of the *F\**-test is slightly closer of the nominal 5% than the Type I error rate of the *W*-test, for which the distributions (more specifically, the skewness) impacts a little more the type I error rate than when there is homoscedasticity. This is consistent with the statement of @Lix_Keselman_Keselman_1996 about the Alexander-Govern and the James second order tests (which return very similar results than the W-test, as we already mentioned). However, both tests still perform well considering liberal Bradley's interval, contrary to the *F*-test that is too liberal, consistently with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995.
+When there is a negative correlation between sample sizes and *SDs* (cells h and f, bottom right in Figure 1), the Type I error rate of the *F\**-test is slightly closer of the nominal 5% than the Type I error rate of the *W*-test, for which the distributions (more specifically, the skewness) impacts a little more the type I error rate than when there is homoscedasticity. This is consistent with the statement of @Lix_Keselman_Keselman_1996 about the Alexander-Govern and the James second order tests (which return very similar results than the *W*-test, as we already mentioned). However, both tests still perform well considering liberal Bradley's interval, contrary to the *F*-test that is too liberal, consistently with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995.
 
 ### In summary
 
